# python_labs

./: README.md  pyproject.toml
data/lab04/: check.csv  input.txt  report.csv
data/lab08/: students_input.json  students_output.json
data/lab09/: students.csv
data/samples/: people.txt  recipes.csv  students.json  weather.csv
src/lab01/: 01_greeting.py  02_sum_avg.py  03_discount_vat.py  04_minutes_to_hhmm.py  05_initials_and_len.py  06_n_people.py
src/lab02/: arras.py  matrix.py  tuples.py
src/lab03/: text_stats.py
src/lab04/: demo_test.py  demo_tst.py  io_txt_csv.py  text_report.py
src/lab05/: csv_xlsx.py  demo.py  json_csv.py
src/lab06/: cli_convert.py  cli_text.py
src/lab07/: README.md
src/lab08/: README.md  demo.py  models.py  serialize.py
src/lab09/: README.md  demo.py  group.py
src/lab10/: README.md  demo.py  linked_list.py  structures.py
src/lib/: text.py
tests/: test_json_csv.py  test_text.py
