[project]
name = "python_labs"
version = "1.0.0"

[tool.black]
line-length = 88
target-version = ["py312"]
exclude = '''
/(
    data
    |images
)/
'''

[tool.ruff]
line-length = 88
target-version = "py312"    
extend-exclude = ["data", "images"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["ES01"]
